--- a/amazoncopy/main.css
+++ b/amazoncopy/main.css
@@ -20,18 +20,18 @@ html {
 	font-family: Arial, sans-serif;
 }
 
-.nav-wrap {
-	width: 80%;
-	margin: 0 auto;
-	min-width: 1550px;
-}
-
 /* nav-top style */
 
 .navbar {
+	width: 100%;
 	height: 111px;
 	position: relative;
-	/* border-bottom: 2px solid #00a8e1; */
+}
+
+.nav-wrap {
+	width: 80%;
+	margin: 0 auto;
+	min-width: 1400px;
 }
 
 .navbar, .nav-top {
@@ -131,6 +131,10 @@ html {
 	left: 13px;
 }
 
+.eventimg {
+	width: 329px;
+}
+
 /* nav-bottom style */
 
 .nav-bottom {
@@ -146,7 +150,7 @@ html {
 }
 
 .menu {
-	width: 810px;
+	width: 726px;
 	padding-top: 13px;
 }
 
