--- a/amazoncopy/CSS/nav.css
+++ b/amazoncopy/CSS/nav.css
@@ -1,28 +1,7 @@
-/* 기본 CSS */
-
-* {
-	margin: 0px;
-	padding: 0px;
-	border: 0px;
-	box-sizing: border-box;
-}
-
-*:focus {
-	outline: none;
-}
-
-a {
-	text-decoration: none;
-}
-
-html {
-	font-size: 16px;
-	font-family: Arial, sans-serif;
-}
-
 /* nav-top style */
 
 .navbar {
+	background-color: #232f3e;
 	width: 100%;
 	height: 111px;
 	position: relative;
@@ -31,15 +10,19 @@ html {
 .nav-wrap {
 	width: 80%;
 	margin: 0 auto;
-	min-width: 1400px;
+	min-width: 1523px;
 }
 
 .navbar, .nav-top {
 	overflow: hidden;
 }
 
-.navbar {
-	background-color: #232f3e;
+.nav-wrap>div {
+	width: 90%
+}
+
+.nav-top {
+	margin: 0 auto;
 }
 
 .nav-top>div {
@@ -132,13 +115,14 @@ html {
 }
 
 .eventimg {
-	width: 329px;
+	width: 298px;
 }
 
 /* nav-bottom style */
 
 .nav-bottom {
-	margin-top: 15px;
+	margin: 15px auto 0 auto;
+	width: 90%;
 	height: 38px;
 	color: #fff;
 }
@@ -150,12 +134,12 @@ html {
 }
 
 .menu {
-	width: 726px;
+	width: 723px;
 	padding-top: 13px;
 }
 
 .usertools {
-	width: 450px;
+	width: 423px;
 }
 
 .location-ico {
@@ -317,81 +301,4 @@ html {
 .detailpage {
 	opacity: 0;
 	height: 8000px;
-}
-
-.planpage {
-	position: relative;
-	overflow: hidden;
-	height: 0px;
-	width: 100%;
-	background-color: #232f3e;
-	transition: height 1s ease;
-	border-bottom: 2px solid #00a8e1;
-}
-
-.planpage-contents {
-	height: 100%;
-	text-align: center;
-	margin: 0 auto;
-	min-width: 1531px;
-}
-
-.planpage-contents-logo {
-	float: left;
-	margin-left: 100px;
-}
-
-.planpage-contents-btn {
-	float: right;
-	margin-right: 100px;
-	width: 150px;
-	height: 100%;
-}
-
-.contents-btn {
-	width: 132px;
-	height: 44px;
-	margin: 10px;
-	background-color: #ffa724;
-	border-color: #ff6138;
-	border-style: solid;
-	border-width: 1px 1px 2px;
-	border-radius: 3px;
-	font-size: 16px;
-	color: #284d40;
-	font-weight: bold;
-}
-
-.planpage-contents-txt {
-	display: inline-block;
-	color: #fafafa;
-	font-weight: 300;
-	margin-top: 30px;
-	font-size: 18px;
-}
-
-.downarrow {
-	display: block;
-	width: 30px;
-	height: 18px;
-	margin: 0 auto;
-}
-
-.planpage-contents-logo {
-	width: 90px;
-	height: 61px;
-}
-
-.primeblue {
-	height: 59px;
-	padding-top: 5px;
-}
-
-.planpage-scroll-bottom {
-	height: 70px;
-}
-
-.planpage-scroll-middle {
-	position: fixed;
-	top: 0;
 }
